:construction_worker: use official ruff action

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run Ruff Lint
-        uses: chartboost/ruff-action@v1
+        uses: astral-sh/ruff-action@v3
