:beers: publish plugin nonebot-plugin-ACMD (#3282)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8284,4 +8284,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_ACMD",
+    "project_link": "nonebot_plugin_ACMD",
+    "author_id": 78413699,
+    "tags": [],
+    "is_official": false
+  },
 ]
