--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8436,4 +8436,16 @@
     "tags": [],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_binsearch",
+    "project_link": "nonebot-plugin-binsearch",
+    "author_id": 157226607,
+    "tags": [
+      {
+        "label": "BankCard",
+        "color": "#37efff"
+      }
+    ],
+    "is_official": false
+  },
 ]
