:beers: publish plugin nonebot_plugin_aiqqbot (#3341)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8622,4 +8622,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_aiqqbot",
+    "project_link": "nonebot-plugin-aiqqbot",
+    "author_id": 91716649,
+    "tags": [
+      {
+        "label": "OpenAI",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
