--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8706,4 +8706,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_furryyunhei",
+    "project_link": "nonebot-plugin-furryyunhei",
+    "author_id": 193674838,
+    "tags": [
+      {
+        "label": "Furry",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
