:beers: publish plugin 暗语消息 (#3432)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8773,4 +8773,20 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_argot",
+    "project_link": "nonebot-plugin-argot",
+    "author_id": 110453675,
+    "tags": [
+      {
+        "label": "👁️",
+        "color": "#e74f88"
+      },
+      {
+        "label": "🤫",
+        "color": "#ffd8b8"
+      }
+    ],
+    "is_official": false
+  },
 ]
