:beers: publish plugin LaTeX 在线渲染插件 (#3313)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8836,4 +8836,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_latex",
+    "project_link": "nonebot-plugin-latex",
+    "author_id": 71250018,
+    "tags": [
+      {
+        "label": "LaTeX",
+        "color": "#007af9"
+      }
+    ],
+    "is_official": false
+  },
 ]
