--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8848,4 +8848,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_mcmod",
+    "project_link": "nonebot-plugin-mcmod",
+    "author_id": 58966022,
+    "tags": [
+      {
+        "label": "Minecraft",
+        "color": "#7d24d5"
+      }
+    ],
+    "is_official": false
+  },
 ]
