:beers: publish plugin 修复 QQ 图床 SSL 错误 (#3481)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9035,4 +9035,20 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_fix_qq_img_ssl",
+    "project_link": "nonebot-plugin-fix-qq-img-ssl",
+    "author_id": 59048777,
+    "tags": [
+      {
+        "label": "SSL",
+        "color": "#ea5252"
+      },
+      {
+        "label": "qq",
+        "color": "#52eabc"
+      }
+    ],
+    "is_official": false
+  },
 ]
