--- a/assets/adapters.json5
+++ b/assets/adapters.json5
@@ -307,6 +307,6 @@
     "author_id": 42648639,
     "homepage": "https://github.com/nonebot/adapter-milky",
     "tags": [],
-    "is_official": false
+    "is_official": true
   },
 ]
