--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9091,4 +9091,24 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_nyaturingtest",
+    "project_link": "nonebot-plugin-nyaturingtest",
+    "author_id": 74781933,
+    "tags": [
+      {
+        "label": "ChatBot",
+        "color": "#689fff"
+      },
+      {
+        "label": "QQ群",
+        "color": "#689fff"
+      },
+      {
+        "label": "LLM",
+        "color": "#689fff"
+      }
+    ],
+    "is_official": false
+  },
 ]
