:beers: publish plugin nonebot_plugin_df_armor_repair_simulator (#3505)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9159,4 +9159,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_df_armor_repair_simulator",
+    "project_link": "nonebot-plugin-df-armor-repair-simulator",
+    "author_id": 109930302,
+    "tags": [
+      {
+        "label": "tool",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
