📝更新插件维护情况

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -2243,6 +2243,10 @@
       {
         "label": "l4d2",
         "color": "#05ff00"
+      },
+      {
+        "label": "Alconna",
+        "color": "#ea5252"
       }
     ],
     "is_official": false
@@ -2804,6 +2808,10 @@
       {
         "label": "maimai",
         "color": "#5262ea"
+      },
+      {
+        "label": "Alconna",
+        "color": "#ea5252"
       }
     ],
     "is_official": false
@@ -3577,6 +3585,10 @@
       {
         "label": "bilibili",
         "color": "#ec15c6"
+      },
+      {
+        "label": "Alconna",
+        "color": "#ea5252"
       }
     ],
     "is_official": false
@@ -4013,18 +4025,6 @@
       {
         "label": "SD",
         "color": "#eaaf52"
-      }
-    ],
-    "is_official": false
-  },
-  {
-    "module_name": "nonebot_plugin_al",
-    "project_link": "nonebot-plugin-al",
-    "author_id": 70925546,
-    "tags": [
-      {
-        "label": "bilibili",
-        "color": "#ea52e5"
       }
     ],
     "is_official": false
@@ -4655,18 +4655,6 @@
     "is_official": false
   },
   {
-    "module_name": "nonebot_plugin_shutup",
-    "project_link": "nonebot-plugin-shutup",
-    "author_id": 70925546,
-    "tags": [
-      {
-        "label": "阻断",
-        "color": "#ea5252"
-      }
-    ],
-    "is_official": false
-  },
-  {
     "module_name": "nonebot_plugin_simple_httpcat",
     "project_link": "nonebot-plugin-simple-httpcat",
     "author_id": 96647974,
@@ -4978,6 +4966,14 @@
       {
         "label": "VRChat",
         "color": "#7aea53"
+      },
+      {
+        "label": "Alconna",
+        "color": "#ea5252"
+      },
+      {
+        "label": "i18n",
+        "color": "#5452ea"
       }
     ],
     "is_official": false
