:beers: publish plugin 三角洲鼠鼠偷吃模拟器 (#3540)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9292,4 +9292,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_deltaforce_simulator",
+    "project_link": "nonebot-plugin-deltaforce-simulator",
+    "author_id": 16055526,
+    "tags": [
+      {
+        "label": "三角洲",
+        "color": "#457a47"
+      }
+    ],
+    "is_official": false
+  },
 ]
