--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9304,4 +9304,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_areusleepy",
+    "project_link": "nonebot-plugin-areusleepy",
+    "author_id": 162931251,
+    "tags": [
+      {
+        "label": "设备状态",
+        "color": "#a762b4"
+      }
+    ],
+    "is_official": false
+  },
 ]
