:beers: publish plugin nonebot-plugin-flomic (#3528)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9336,4 +9336,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_flomic",
+    "project_link": "nonebot-plugin-flomic",
+    "author_id": 188882430,
+    "tags": [],
+    "is_official": false
+  },
 ]
