--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9382,4 +9382,16 @@
     "tags": [],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_zzz_avatar_panel",
+    "project_link": "nonebot-plugin-zzz-avatar-panel",
+    "author_id": 126453704,
+    "tags": [
+      {
+        "label": "绝区零",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
